<resources>
    <string name="app_name">Flipoku</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="expert">Expert</string>
    <string name="custom">Custom</string>
    <string name="clues">Clues</string>
    <string name="new_game">Start New Game</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="statistics">Statistics</string>
    <string name="preferences">Preferences</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="copyright">FLIPOKU 2019</string>
    <string name="icons_black">Black icons</string>
    <string name="icons_white">White icons</string>
    <string name="mode_day">Day</string>
    <string name="mode_night">Night</string>
    <string name="mode_custom">Custom</string>
    <string name="timer_show">Show timer</string>
    <string name="timer_hide">Hide timer</string>
    <string name="board_side_right">Right side</string>
    <string name="board_side_left">Left side</string>
    <string name="appearance">Appearance</string>
    <string name="best_time">Best Time:</string>
    <string name="quantity_of_games">Quantity of Games:</string>
    <string name="quantity_of_loses">Defeats:</string>
    <string name="quantity_of_wins">Victories:</string>
    <string name="streak_of_victories">Win Streak:</string>
    <string name="selection_line_thickness">Line selection thickness</string>
    <string name="unlock_clues">To help create more games of this type, you can purchase any of my other Google Play apps.</string>
    <string name="no_ads_game">This game does not contain advertising and does not require internet access permissions.</string>
    <string name="victory">¡THE GAME HAS BEEN WON!</string>
    <string name="defeat">GAME LOST (+ than 3 mistakes)</string>
    <string name="mistakes">MISTAKES:</string>
    <string name="must_start_new_game">You must start a new game</string>
    <string name="wrong_number">¡Wrong number!</string>
    <string name="value_of_the_cell">The value of the cell is:</string>
    <string name="select_number_clues">SELECT THE NUMBER OF CLUES</string>
    <string name="play">PLAY</string>
    <string name="go_back">RETURN</string>
    <string name="accept">ACCEPT</string>
    <string name="visibility">VISIBILITY</string>
    <string name="board_side">Board Side</string>
    <string name="timer">Timer</string>
    <string name="icons">Icons</string>
    <string name="colors">COLORS</string>
    <string name="start_new_game">(Start New Game)</string>
    <string name="difficulty">DIFFICULTY</string>
    <string name="pencil">PENCIL</string>
    <string name="time">TIME:</string>
    <string name="preview_of_board">PREVIEW OF THE BOARD</string>
    <string name="erase_statistics">Erase statistics</string>
    <string name="lines">Lines</string>
    <string name="lines_black">Black lines</string>
    <string name="lines_white">White lines</string>
    <string name="background">Background</string>
    <string name="text">Text</string>
    <string name="board_lines_color">Board lines color</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="erase">Erase</string>
    <string name="select">Select</string>
    <string name="about">About</string>
    <string name="selected_mode">Selected mode</string>
    <string name="iterations_required">Iterations to generate the board:</string>
</resources>