<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15sp"
    android:orientation="horizontal"
    android:padding="42sp"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/customGameLinearLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone"
        android:weightSum="4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/select_number_clues"
            android:textAlignment="center" />

        <NumberPicker
            android:id="@+id/cluesNumberPicker"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="2sp"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/returnButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/go_back" />

            <Button
                android:id="@+id/playCustomButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_play_game"
                android:text="@string/play" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/newGameButtonsLinearLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="5">

        <Button
            android:id="@+id/customizedButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/custom"
            android:visibility="visible" />

        <Button
            android:id="@+id/easyButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/easy" />

        <Button
            android:id="@+id/mediumButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/medium" />

        <Button
            android:id="@+id/hardButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/hard" />

        <Button
            android:id="@+id/expertButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/expert" />
    </LinearLayout>
</LinearLayout>