<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".StatisticsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/statisticsAppBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/side_nav_bar"
                android:paddingTop="@dimen/appbar_padding_top"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/statisticsToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="1"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:title="@string/statistics">

                </android.support.v7.widget.Toolbar>

                <android.support.design.widget.TabLayout
                    android:id="@+id/statisticsTabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TabItem
                        android:id="@+id/easyTabItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/easy" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/mediumTabItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/medium" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/hardTabItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hard" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/expertTabItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expert" />

                </android.support.design.widget.TabLayout>
            </android.support.design.widget.AppBarLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.v4.view.ViewPager
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>